--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,75 +4,77 @@
 
 /*Styles for TopLoader*/
 #nprogress {
-    pointer-events: none
+  pointer-events: none;
 }
 
 #nprogress .bar {
-    background: #94a3b8;
-    position: fixed;
-    z-index: 1600;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 3px;
+  background: #94a3b8;
+  position: fixed;
+  z-index: 1600;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
 }
 
 #nprogress .peg {
-    display: block;
-    position: absolute;
-    right: 0;
-    width: 100px;
-    height: 100%;
-    box-shadow: 0 0 10px #94a3b8, 0 0 5px #94a3b8;
-    opacity: 1;
-    -webkit-transform: rotate(3deg) translate(0px, -4px);
-    -ms-transform: rotate(3deg) translate(0px, -4px);
-    transform: rotate(3deg) translate(0px, -4px)
+  display: block;
+  position: absolute;
+  right: 0;
+  width: 100px;
+  height: 100%;
+  box-shadow: 0 0 10px #94a3b8,
+  0 0 5px #94a3b8;
+  opacity: 1;
+  -webkit-transform: rotate(3deg) translate(0px, -4px);
+  -ms-transform: rotate(3deg) translate(0px, -4px);
+  transform: rotate(3deg) translate(0px, -4px);
 }
 
 #nprogress .spinner {
-    display: block;
-    position: fixed;
-    z-index: 1600;
-    top: 15px;
-    right: 15px
+  display: block;
+  position: fixed;
+  z-index: 1600;
+  top: 15px;
+  right: 15px;
 }
 
 #nprogress .spinner-icon {
-    width: 18px;
-    height: 18px;
-    box-sizing: border-box;
-    border: 2px solid transparent;
-    border-top-color: #94a3b8;
-    border-left-color: #94a3b8;
-    border-radius: 50%;
-    -webkit-animation: nprogress-spinner 400ms linear infinite;
-    animation: nprogress-spinner 400ms linear infinite
+  width: 18px;
+  height: 18px;
+  box-sizing: border-box;
+  border: 2px solid transparent;
+  border-top-color: #94a3b8;
+  border-left-color: #94a3b8;
+  border-radius: 50%;
+  -webkit-animation: nprogress-spinner 400ms linear infinite;
+  animation: nprogress-spinner 400ms linear infinite;
 }
 
 .nprogress-custom-parent {
-    overflow: hidden;
-    position: relative
+  overflow: hidden;
+  position: relative;
 }
 
-.nprogress-custom-parent #nprogress .bar, .nprogress-custom-parent #nprogress .spinner {
-    position: absolute
+.nprogress-custom-parent #nprogress .bar,
+.nprogress-custom-parent #nprogress .spinner {
+  position: absolute;
 }
 
 @-webkit-keyframes nprogress-spinner {
-    0% {
-        -webkit-transform: rotate(0deg)
-    }
-    100% {
-        -webkit-transform: rotate(360deg)
-    }
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes nprogress-spinner {
-    0% {
-        transform: rotate(0deg)
-    }
-    100% {
-        transform: rotate(360deg)
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
